--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           -ext WixUIExtension -o Installer/WindowTabs.msi WtSetup/Product.wixobj
 
     - name: Upload Artifacts
-      uses: actions/upload-artifact@4.6.2
+      uses: actions/upload-artifact@v4.6.2
       with:
         name: WindowTabs-Release
         path: |
