--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,8 +42,7 @@ jobs:
     - name: Compile WXS → WIXOBJ
       shell: powershell
       run: |
-        & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\candle.exe' `
-          WtSetup\Product.wxs -ext WixUIExtension
+        & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\candle.exe' 'WtSetup\Product.wxs' -ext WixUIExtension
 
     - name: Link WIXOBJ → MSI
       shell: powershell
