--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,18 +42,20 @@ jobs:
     - name: Compile WXS → WIXOBJ
       shell: powershell
       run: |
-        & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\candle.exe' 'WtSetup\Product.wxs' -ext WixUIExtension
+        & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\candle.exe' '.\WtSetup\Product.wxs' -ext WixUIExtension
 
     - name: Link WIXOBJ → MSI
       shell: powershell
       run: |
         & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\light.exe' `
-          -ext WixUIExtension -o Installer/WindowTabs.msi WtSetup/Product.wixobj
+          -ext WixUIExtension `
+          -o '.\Installer\WindowTabs.msi' `
+          '.\WtSetup\Product.wixobj'
 
     - name: Upload Artifacts
       uses: actions/upload-artifact@v4.6.2
       with:
         name: WindowTabs-Release
         path: |
-          WtProgram/bin/Release/WindowTabs.exe
-          Installer/WindowTabs.msi
+          WtProgram\bin\Release\WindowTabs.exe
+          Installer\WindowTabs.msi
