--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,27 +40,11 @@ jobs:
         & "${{ steps.find-msbuild.outputs.msbuild }}" WindowTabs.sln /p:Configuration=Release /m
 
 
-    - name: Debug .wxs files in workspace
-      shell: pwsh
-      run: |
-        Write-Host "GITHUB_WORKSPACE = $Env:GITHUB_WORKSPACE"
-        Get-ChildItem -Path $Env:GITHUB_WORKSPACE -Recurse -Filter *.wxs |
-          ForEach-Object { Write-Host "  - " + $_.FullName }
-
-
-    - name: Debug .wixobj files in workspace
-      shell: pwsh
-      run: |
-        Write-Host "GITHUB_WORKSPACE = $Env:GITHUB_WORKSPACE"
-        Get-ChildItem -Path $Env:GITHUB_WORKSPACE -Recurse -Filter *.wixobj |
-          ForEach-Object { Write-Host "  - " + $_.FullName }
-
-
     - name: Compile WXS → WIXOBJ
       shell: pwsh
       run: |
         $path = Join-Path $Env:GITHUB_WORKSPACE 'WtSetup\WtSetup.wxs'
-        if (-not $wxsFile) { Write-Error '❌ 找不到 Product.wxs'; exit 1 }
+        if (-not (Test-Path $path)) { Write-Error '❌ 找不到 Product.wxs'; exit 1 }
 
         Write-Host "✔ $path"
         & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\candle.exe' `
@@ -71,7 +55,7 @@ jobs:
       shell: pwsh
       run: |
         $path = Join-Path $Env:GITHUB_WORKSPACE 'WtSetup\WtSetup.wixobj'
-        if (-not $wxsFile) { Write-Error '❌ 找不到 Product.wixobj'; exit 1 }
+        if (-not (Test-Path $path)) { Write-Error '❌ 找不到 Product.wixobj'; exit 1 }
 
         Write-Host "✔ $path"
         & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\light.exe' `
