--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
 
 
     - name: Copy WiX resources into WtSetup
-      shell: powershell
+      shell: pwsh
       run: |
         $src = Join-Path $Env:GITHUB_WORKSPACE 'WtProgram\Resources'
         $dst = Join-Path $Env:GITHUB_WORKSPACE 'WtSetup'
@@ -67,9 +67,8 @@ jobs:
         Copy-Item (Join-Path $src 'Banner.bmp') -Destination $dst -Force
 
         Write-Host "✔ 已複製資源："
-        Get-ChildItem -Path $dst -Include '*.ico','*.bmp' | ForEach-Object {
-          Write-Host "  - $($_.Name)"
-        }
+        # Get-ChildItem -Path $dst -Include '*.ico','*.bmp' | ForEach-Object { Write-Host "  - $($_.Name)" }
+        Get-ChildItem -Path $dst -Include '*.ico','*.bmp' | ForEach-Object { Write-Host "  - " + $_.Name }
 
 
     - name: Link WIXOBJ → MSI (auto-find)
