Update GitHub Actions workflow configuration
- Refine job triggers and workflows in main.yml
- Adjust build and test steps for improved CI reliability
- Add caching for dependencies to speed up runs

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,18 +68,19 @@ jobs:
       - name: Link WIXOBJ → MSI
         shell: pwsh
         run: |
-          # 進到 WtSetup 資料夾，讓 Banner.bmp 與 .ico 的相對路徑成立
-          $ws       = $Env:GITHUB_WORKSPACE
-          $setupDir = Join-Path $ws 'WtSetup'
-          Push-Location $setupDir
+          $ws      = $Env:GITHUB_WORKSPACE
+          $wixObj  = Join-Path $ws 'WtSetup.wixobj'          # 根目錄的檔案
+          $setupBP = Join-Path $ws 'WtSetup'                 # Binder base path
 
-          # 連結 .wixobj（這裡檔名就是 WtSetup.wixobj，因為 candle 會輸出在當前資料夾）
+          if (-not (Test-Path $wixObj)) {
+            Write-Error "找不到 $wixObj，請確認 candle.exe 是否成功！"; exit 1
+          }
+
           & 'C:\Program Files (x86)\WiX Toolset v3.14\bin\light.exe' `
+            -b $setupBP `                     # 告訴 WiX：相對路徑請從 WtSetup 開始判
             -ext WixUIExtension `
             -o (Join-Path $ws 'Installer\WindowTabs.msi') `
-            'WtSetup.wixobj'
-
-          Pop-Location
+            $wixObj
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4.6.2
